--- a/index.html
+++ b/index.html
@@ -69,7 +69,6 @@
       border-radius: 30px;
     }
 
-    /* HERO GRID */
     .hero-grid {
       display: grid;
       grid-template-columns: 1.2fr 0.8fr;
@@ -159,20 +158,35 @@
       background: #8b7fe0;
     }
 
+    /* UPDATED FOOTER LAYOUT */
     .footer-info {
       background: #EAF7F3;
-      font-size: 1rem;
-      line-height: 1.8;
-      font-weight: 600;
       max-width: 95%;
       margin: 4rem auto 0;
       padding: 3.5rem 4.5rem;
       border-radius: 34px;
-      text-align: center;
+      display: grid;
+      grid-template-columns: 1.4fr 1fr;
+      gap: 4rem;
+      font-size: 1rem;
+      line-height: 1.8;
+      font-weight: 600;
+    }
+
+    .footer-left {
+      text-align: left;
+    }
+
+    .footer-right {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 2rem;
+      text-align: left;
+      align-items: start;
     }
 
     .footer-info h3 {
-      margin-top: 2rem;
+      margin-top: 0;
       font-weight: 800;
     }
 
@@ -188,6 +202,16 @@
       }
 
       .hero-bubble.secondary {
+        text-align: center;
+      }
+
+      .footer-info {
+        grid-template-columns: 1fr;
+        text-align: center;
+      }
+
+      .footer-right {
+        grid-template-columns: 1fr;
         text-align: center;
       }
     }
@@ -262,29 +286,37 @@
 </section>
 
 <section class="footer-info">
-  <h3>Open Hours</h3>
-  Mon–Fri: 9 AM – 6 PM<br>
-  Saturday: 9 AM – 4 PM<br>
-  Sunday: Closed
+  <div class="footer-left">
+    <h3>Open Hours</h3>
+    Mon–Fri: 9 AM – 6 PM<br>
+    Saturday: 9 AM – 4 PM<br>
+    Sunday: Closed
 
-  <h3>Locations</h3>
-  2575 Eastern Boulevard, Suites 204 & 212<br>
-  York, PA 17402<br><br>
+    <h3 style="margin-top:2.5rem;">Locations</h3>
+    2575 Eastern Boulevard, Suites 204 & 212<br>
+    York, PA 17402<br><br>
 
-  924 Colonial Avenue, Bldg. N<br>
-  York, PA 17403<br><br>
+    924 Colonial Avenue, Bldg. N<br>
+    York, PA 17403<br><br>
 
-  2217 Carlisle Road, Suite 400<br>
-  York, PA 17408
+    2217 Carlisle Road, Suite 400<br>
+    York, PA 17408
+  </div>
 
-  <h3>Get in Touch</h3>
-  Telephone: (717) 894-0523<br>
-  Email: psy@psyservicesofyork.org
+  <div class="footer-right">
+    <div>
+      <h3>Get in Touch</h3>
+      Telephone: (717) 894-0523<br>
+      Email: psy@psyservicesofyork.org
+    </div>
 
-  <h3>Client Portal</h3>
-  <a href="https://www.therapyportal.com/p/psychservices17406/login/" target="_blank">
-    Sign into your client portal for updates or scheduling
-  </a>
+    <div>
+      <h3>Client Portal</h3>
+      <a href="https://www.therapyportal.com/p/psychservices17406/login/" target="_blank">
+        Sign into your client portal for updates or scheduling
+      </a>
+    </div>
+  </div>
 </section>
 
 <script>
