--- a/index.html
+++ b/index.html
@@ -3,328 +3,54 @@
 <head>
   <meta charset="UTF-8" />
   <title>Universal Psychological Services</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link href="https://fonts.googleapis.com/css2?family=Nanum+Myeongjo:wght@400;700;800&display=swap" rel="stylesheet">
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Hahmlet:wght@400;600&family=Charis+SIL&display=swap" rel="stylesheet">
 
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Nanum Myeongjo', Georgia, serif;
-      background: #FBFAFD;
-      color: #1e293b;
-    }
-
-    header {
-      background: #9D8DEB;
-      padding: 2rem;
-      text-align: center;
-      font-weight: 800;
-      font-size: 2.5rem;
-      position: relative;
-    }
-
-    nav {
-      position: absolute;
-      top: 20px;
-      right: 20px;
-    }
-
-    nav button {
-      background: transparent;
-      border: none;
-      font-weight: 700;
-      font-size: 1rem;
-      cursor: pointer;
-    }
-
-    .dropdown {
-      display: none;
-      position: absolute;
-      right: 0;
-      background: white;
-      border-radius: 14px;
-      box-shadow: 0 10px 25px rgba(0,0,0,0.1);
-      margin-top: 10px;
-      overflow: hidden;
-      min-width: 260px;
-    }
-
-    .dropdown a {
-      display: block;
-      padding: 14px 22px;
-      text-decoration: none;
-      color: #1e293b;
-      font-weight: 600;
-      font-size: 0.9rem;
-    }
-
-    .dropdown a:hover {
-      background: #f1f5f9;
-    }
-
-    section {
-      max-width: 1150px;
-      margin: 3rem auto;
-      padding: 3rem 3.5rem;
-      border-radius: 30px;
-    }
-
-    .hero-grid {
-      display: grid;
-      grid-template-columns: 1.2fr 0.8fr;
-      gap: 3rem;
-      align-items: center;
-    }
-
-    .hero-bubble {
-      background: #9DC7F4;
-      border-radius: 30px;
-      padding: 3.5rem;
-      text-align: center;
-    }
-
-    .hero-bubble h2 {
-      font-weight: 800;
-      font-size: 2.6rem;
-      margin-top: 0;
-    }
-
-    .hero-bubble p {
-      font-weight: 700;
-      font-size: 1.15rem;
-      line-height: 1.7;
-      max-width: 800px;
-      margin: 0.75rem auto;
-    }
-
-    .hero-bubble.secondary {
-      background: #EEF2FF;
-      text-align: left;
-    }
-
-    .hero-bubble.secondary h3 {
-      font-weight: 800;
-      font-size: 1.5rem;
-      margin-top: 0;
-    }
-
-    .hero-bubble.secondary p {
-      font-weight: 600;
-      font-size: 1.05rem;
-      line-height: 1.7;
-    }
-
-    .appointment {
-      background: #F3F4FF;
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      gap: 2.5rem;
-    }
-
-    .appointment h2 {
-      font-size: 2.1rem;
-      font-weight: 800;
-      margin-top: 0;
-    }
-
-    .appointment p {
-      font-weight: 700;
-      font-size: 1.1rem;
-    }
-
-    form input,
-    form textarea {
-      width: 100%;
-      padding: 14px 16px;
-      margin-bottom: 14px;
-      border-radius: 14px;
-      border: 1px solid #cbd5e1;
-      font-family: inherit;
-      font-size: 1rem;
-    }
-
-    form button {
-      background: #9D8DEB;
-      color: white;
-      font-weight: 700;
-      border: none;
-      padding: 16px;
-      border-radius: 16px;
-      cursor: pointer;
-      font-size: 1.05rem;
-    }
-
-    form button:hover {
-      background: #8b7fe0;
-    }
-
-    /* UPDATED FOOTER LAYOUT */
-    .footer-info {
-      background: #EAF7F3;
-      max-width: 95%;
-      margin: 4rem auto 0;
-      padding: 3.5rem 4.5rem;
-      border-radius: 34px;
-      display: grid;
-      grid-template-columns: 1.4fr 1fr;
-      gap: 4rem;
-      font-size: 1rem;
-      line-height: 1.8;
-      font-weight: 600;
-    }
-
-    .footer-left {
-      text-align: left;
-    }
-
-    .footer-right {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      gap: 2rem;
-      text-align: left;
-      align-items: start;
-    }
-
-    .footer-info h3 {
-      margin-top: 0;
-      font-weight: 800;
-    }
-
-    .footer-info a {
-      color: #1e293b;
-      font-weight: 700;
-      text-decoration: underline;
-    }
-
-    @media (max-width: 900px) {
-      .hero-grid {
-        grid-template-columns: 1fr;
-      }
-
-      .hero-bubble.secondary {
-        text-align: center;
-      }
-
-      .footer-info {
-        grid-template-columns: 1fr;
-        text-align: center;
-      }
-
-      .footer-right {
-        grid-template-columns: 1fr;
-        text-align: center;
-      }
-    }
-
-    @media (max-width: 800px) {
-      .appointment {
-        grid-template-columns: 1fr;
-      }
-
-      section {
-        padding: 2.5rem;
-      }
-
-      .footer-info {
-        padding: 3rem 2.5rem;
-      }
-    }
-  </style>
+  <!-- Styles -->
+  <link rel="stylesheet" href="styles.css" />
 </head>
-
 <body>
 
-<header>
-  Universal Psychological Services
+  <!-- NAV -->
+  <nav class="nav">
+    <div class="nav-inner">
+      <div class="logo">
+        <img src="images/brain-logo.png" alt="Logo" />
+        <div>
+          <h1>Universal Psychological Services</h1>
+          <p>The Power of Possibilities</p>
+        </div>
+      </div>
 
-  <nav>
-    <button onclick="toggleMenu()">Menu ▾</button>
-    <div id="dropdown" class="dropdown">
-      <a href="index.html">Home</a>
-      <a href="services.html">Services</a>
-      <a href="#">Meet Our Staff</a>
-      <a href="#">FAQ</a>
-      <a href="#">About Us</a>
-      <a href="#">Contact</a>
+      <details class="menu">
+        <summary>Menu</summary>
+        <a href="#services">Services</a>
+        <a href="#about">About</a>
+        <a href="#team">Our Team</a>
+        <a href="#faq">FAQ</a>
+        <a href="#contact">Contact</a>
+      </details>
     </div>
   </nav>
-</header>
 
-<section class="hero-grid">
-  <div class="hero-bubble">
-    <h2>Where You Matter.</h2>
-    <p><strong>Private – Professional – Personal</strong></p>
-    <p>
-      Welcome to Universal Psychological Services, where each client matters.
-      We value and provide unique therapeutic experiences for all.
-    </p>
-  </div>
-
-  <div class="hero-bubble secondary">
-    <h3>Finding What You Need</h3>
-    <p>
-      To view our services and additional details, please visit the
-      drop-down menu located at the top right corner of this page.
-    </p>
-  </div>
-</section>
-
-<section class="appointment">
-  <div>
-    <h2>Book an Appointment Now!</h2>
-    <p>Make a booking with our online form:</p>
-  </div>
-
-  <form action="mailto:naharahake@gmail.com" method="POST" enctype="text/plain">
-    <input type="text" name="First Name" placeholder="First Name" required>
-    <input type="text" name="Last Name" placeholder="Last Name" required>
-    <input type="email" name="Email" placeholder="Email" required>
-    <input type="tel" name="Phone Number" placeholder="Phone Number">
-    <textarea name="Message" placeholder="Optional Message"></textarea>
-    <button type="submit">Submit</button>
-  </form>
-</section>
-
-<section class="footer-info">
-  <div class="footer-left">
-    <h3>Open Hours</h3>
-    Mon–Fri: 9 AM – 6 PM<br>
-    Saturday: 9 AM – 4 PM<br>
-    Sunday: Closed
-
-    <h3 style="margin-top:2.5rem;">Locations</h3>
-    2575 Eastern Boulevard, Suites 204 & 212<br>
-    York, PA 17402<br><br>
-
-    924 Colonial Avenue, Bldg. N<br>
-    York, PA 17403<br><br>
-
-    2217 Carlisle Road, Suite 400<br>
-    York, PA 17408
-  </div>
-
-  <div class="footer-right">
-    <div>
-      <h3>Get in Touch</h3>
-      Telephone: (717) 894-0523<br>
-      Email: psy@psyservicesofyork.org
+  <!-- HERO -->
+  <section class="hero">
+    <div class="hero-text bubble">
+      <span class="pill">Private · Professional · Personal</span>
+      <h2>Where You Matter.</h2>
+      <p>
+        Welcome to Universal Psychological Services, where each client matters.
+        We value and provide unique therapeutic experiences for all.
+      </p>
+      <a class="button" href="#booking">Book Appointment</a>
     </div>
 
-    <div>
-      <h3>Client Portal</h3>
-      <a href="https://www.therapyportal.com/p/psychservices17406/login/" target="_blank">
-        Sign into your client portal for updates or scheduling
-      </a>
+    <div class="hero-image bubble">
+      <img src="images/hero.png" alt="Peaceful environment" />
     </div>
-  </div>
-</section>
-
-<script>
-  function toggleMenu() {
-    const menu = document.getElementById("dropdown");
-    menu.style.display = menu.style.display === "block" ? "none" : "block";
-  }
-</script>
+  </section>
 
 </body>
 </html>
